--- a/package.json
+++ b/package.json
@@ -21,13 +21,19 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "format": "prettier -w --plugin-search-dir=. ."
+    "format": "prettier -w --plugin-search-dir=. .",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "test:watch:ui": "vitest --ui"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
+    "@vitest/ui": "^0.24.3",
     "astro": "^1.5.2",
+    "fast-check": "^3.3.0",
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.6.0"
+    "prettier-plugin-astro": "^0.6.0",
+    "vitest": "^0.24.3"
   },
   "peerDependencies": {
     "astro": "^1.5.2"
