--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fast-check": "^3.3.0",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.6.0",
+    "ultrahtml": "1.0.0-next.3",
     "vitest": "^0.24.3"
   },
   "peerDependencies": {
@@ -44,6 +45,6 @@
   },
   "packageManager": "pnpm@7.13.6",
   "dependencies": {
-    "ultrahtml": "^0.4.0"
+    "tiny-invariant": "^1.3.1"
   }
 }
