--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "repository": {
     "url": "https://github.com/jasikpark/astro-svg-loader"
   },
+  "license": "MIT",
   "version": "0.0.1",
   "type": "module",
   "exports": {
