--- a/package.json
+++ b/package.json
@@ -19,22 +19,27 @@
     "svg-loader"
   ],
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
     "preinstall": "npx only-allow pnpm",
+    "demo:dev": "astro dev",
+    "demo:build": "astro build",
+    "demo:preview": "astro preview",
     "format": "prettier -w --plugin-search-dir=. .",
     "test": "vitest --run",
     "test:watch": "vitest",
-    "test:watch:ui": "vitest --ui"
+    "test:watch:ui": "vitest --ui",
+    "check:astro": "astro check",
+    "check:ts": "tsc -p .",
+    "check": "run-p check:*"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
     "@vitest/ui": "^0.24.3",
     "astro": "^1.5.2",
     "fast-check": "^3.3.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.6.0",
+    "typescript": "^4.8.4",
     "vitest": "^0.24.3"
   },
   "peerDependencies": {
