Use frozen lockfile

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -19,6 +19,6 @@ jobs:
           node-version: 16
           cache: "pnpm"
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
       - name: Check formatting
         run: npm run format:check
