--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Install node and pnpm
-        uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6.32.9
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: "pnpm"
