--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,15 +13,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2.2.1
-      - name: Install node
-        uses: actions/setup-node@v3
+      - name: Install Tools & Dependencies
+        uses: ./.github/actions/install
         with:
           node-version: 16
-          cache: "pnpm"
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
       - name: Check `*.astro` types
         run: npm run check:astro
       - name: Check `*.ts` types
