--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@changesets/cli": "^2.25.0",
     "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
     "@vitest/ui": "^0.24.3",
-    "astro": "^1.5.2",
+    "astro": "^1.6.0",
     "fast-check": "^3.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.6.0",
+    "shiki": "^0.11.1",
     "typescript": "^4.8.4",
     "vitest": "^0.24.3"
   },
