--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
     "@vitest/ui": "^0.28.0",
     "astro": "^2.0.0",
+    "astro-remote": "^0.2.3",
     "fast-check": "^3.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
