--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "format": "prettier -w --plugin-search-dir=. .",
-    "format:check": "prettier -c --plugin-search-dir=. .",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
     "test": "vitest --run",
     "test:watch": "vitest",
     "test:watch:ui": "vitest --ui",
@@ -35,13 +35,13 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.0",
-    "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@vitest/ui": "^0.34.0",
     "astro": "^2.0.0",
     "fast-check": "^3.3.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.8.0",
+    "prettier": "prettier/prettier#5f6fb2580fb98501fd6acdb1382f18c7f13e9d33",
+    "prettier-plugin-astro": "^0.12.1",
     "shiki": "^0.14.0",
     "typescript": "^5.0.0",
     "vitest": "^0.34.0"
