batch prettier upgrades w/ renovate

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,4 +7,10 @@
     enabled: true,
     automerge: true,
   },
+  packageRules: [
+    {
+      groupName: "prettier and plugins",
+      matchPackageNames: ["prettier", "*prettier-plugin-*"],
+    },
+  ],
 }
