--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "astro": "^2.0.0"
   },
   "engines": {
-    "node": "^14.18.0 || >=16.12.0",
+    "node": ">18",
     "pnpm": ">=7.9.5"
   },
   "packageManager": "pnpm@8.10.2",
