Setup eslint for astro & ts
Fixes https://github.com/jasikpark/astro-svg-loader/issues/4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,12 @@
   "[astro]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "languageToolLinter.languageTool.ignoredWordsInWorkspace": ["astro", "vite"]
+  "languageToolLinter.languageTool.ignoredWordsInWorkspace": ["astro", "vite"],
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "astro", // Enable .astro
+    "typescript", // Enable .ts
+    "typescriptreact" // Enable .tsx
+  ]
 }
