--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         uses: changesets/action@v1
         with:
           # Note: pnpm install after versioning is necessary to refresh lockfile
-          version: pnpm run version
+          version: pnpm version
           publish: pnpm exec changeset publish
           commit: "[ci] release"
           title: "[ci] release"
