Publish the package w/ provenance

--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
   "packageManager": "pnpm@8.10.2+sha256.487609e857f1c11780cc98dd0bfe4c8a8b11c7f23bc3a4493ac7d263d6fb6c8c",
   "dependencies": {
     "ultrahtml": "1.5.2"
+  },
+  "publishConfig": {
+    "provenance": true
   }
 }
