Publish the package w/ provenance (#74)
* Publish the package w/ provenance

* Add changeset

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "check:astro": "astro check",
     "check:ts": "tsc -p .",
     "check": "run-p check:*",
-    "version": "changeset version && pnpm install --no-frozen-lockfile && pnpm format"
+    "version": "changeset version && pnpm install --no-frozen-lockfile && pnpm format",
+    "changeset": "changeset"
   },
   "devDependencies": {
     "@astrojs/check": "^0.3.1",
@@ -62,5 +63,8 @@
   "packageManager": "pnpm@8.10.2+sha256.487609e857f1c11780cc98dd0bfe4c8a8b11c7f23bc3a4493ac7d263d6fb6c8c",
   "dependencies": {
     "ultrahtml": "1.5.2"
+  },
+  "publishConfig": {
+    "provenance": true
   }
 }
