Improve renovate config

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,7 +1,6 @@
 {
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
-  extends: ["config:base"],
-  dependencyDashboard: false,
+  extends: ["config:best-practices", "config:js-lib"],
   rangeStrategy: "update-lockfile",
   lockFileMaintenance: {
     enabled: true,
