--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@vitest/ui": "0.34.7",
     "astro": "3.6.5",
     "eslint": "8.57.0",
-    "eslint-plugin-astro": "0.31.4",
+    "eslint-plugin-astro": "1.3.0",
     "eslint-plugin-jsx-a11y": "6.10.0",
     "fast-check": "3.19.0",
     "npm-run-all2": "5.0.0",
@@ -62,6 +62,8 @@
   },
   "packageManager": "pnpm@8.15.8",
   "dependencies": {
+    "eslint-plugin-import": "^2.31.0",
+    "typescript-eslint": "^8.10.0",
     "ultrahtml": "1.5.3"
   },
   "publishConfig": {
