--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint": "eslint",
     "check:astro": "astro check",
     "check:ts": "tsc -p .",
-    "check": "run-p check:*",
+    "check": "pnpm run '/^check:.*/'",
     "version": "changeset version && pnpm install --no-frozen-lockfile && pnpm format",
     "changeset": "changeset"
   },
@@ -46,7 +46,6 @@
     "eslint-plugin-astro": "1.3.0",
     "eslint-plugin-jsx-a11y": "6.10.0",
     "fast-check": "3.22.0",
-    "npm-run-all2": "5.0.0",
     "prettier": "3.2.5",
     "prettier-plugin-astro": "0.14.1",
     "shiki": "1.1.5",
