--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "@astrojs/check": "0.9.4",
     "@changesets/cli": "2.27.9",
     "@ianvs/prettier-plugin-sort-imports": "4.3.1",
+    "@types/eslint__js": "^8.42.3",
     "@typescript-eslint/parser": "8.10.0",
     "@vitest/ui": "2.1.3",
-    "astro": "3.6.5",
+    "astro": "4.16.6",
     "eslint": "8.57.1",
     "eslint-plugin-astro": "1.3.0",
     "eslint-plugin-jsx-a11y": "6.10.0",
@@ -49,7 +50,7 @@
     "prettier": "3.2.5",
     "prettier-plugin-astro": "0.14.1",
     "shiki": "1.1.5",
-    "typescript": "5.4.5",
+    "typescript": "5.6.3",
     "vitest": "2.1.3"
   },
   "peerDependencies": {
