--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@astrojs/check": "0.9.4",
     "@changesets/cli": "2.27.9",
+    "@eslint/js": "^9.14.0",
     "@ianvs/prettier-plugin-sort-imports": "4.3.1",
     "@types/eslint__js": "8.42.3",
     "@typescript-eslint/parser": "8.13.0",
@@ -52,6 +53,7 @@
     "prettier-plugin-astro": "0.14.1",
     "shiki": "1.22.2",
     "typescript": "5.6.3",
+    "typescript-eslint": "^8.13.0",
     "vitest": "2.1.4"
   },
   "peerDependencies": {
@@ -63,7 +65,6 @@
   },
   "packageManager": "pnpm@9.12.3",
   "dependencies": {
-    "typescript-eslint": "^8.13.0",
     "ultrahtml": "1.5.3"
   },
   "publishConfig": {
