--- a/package.json
+++ b/package.json
@@ -44,16 +44,18 @@
     "@typescript-eslint/parser": "8.46.0",
     "@vitest/ui": "3.2.4",
     "astro": "5.14.4",
-    "eslint": "8.57.1",
+    "eslint": "9.37.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-astro": "1.3.1",
     "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "fast-check": "4.3.0",
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
     "shiki": "3.13.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.0",
+    "typescript-eslint": "8.46.1",
     "vitest": "3.2.4"
   },
   "peerDependencies": {
